--- a/src/main/resources/templates/flashcard.html
+++ b/src/main/resources/templates/flashcard.html
@@ -14,5 +14,7 @@
 <a href="/flashcard/new/add" class="url"><span class="urlText">カードを新規作成</span></a>
 <br>
 <a href="/flashcard/use" class="url"><span class="urlText">フラッシュカードで学習する</span></a>
+<br>
+<a href="/flashcard/favorites" class="url"><span class="urlText">お気に入り登録したカード一覧</span></a>
 </body>
 </html>
