--- a/src/main/resources/templates/useFlashcard.html
+++ b/src/main/resources/templates/useFlashcard.html
@@ -31,6 +31,7 @@
 <div th:text="${explanation}" id="explanation"></div>
 </form>
 
+<a href="/flashcard/favorite">好き</a>
 <a href="/flashcard/use" id="next">次へ</a>
 </body>
 </html>
