--- a/src/main/resources/templates/help.html
+++ b/src/main/resources/templates/help.html
@@ -23,7 +23,7 @@
 <br>
 <label>質問の回答：</label><input type="text" name="answer" placeholder="回答" th:value=${answer}>
 <br>
-<input type="submit" value="送信">
+<input type="submit" id="send" value="送信">
 <br>
 <span th:text="${message}" style="color:red"></span>
 
