--- a/src/main/resources/templates/incorrectDetail.html
+++ b/src/main/resources/templates/incorrectDetail.html
@@ -22,10 +22,20 @@
 選択肢
 <br>
 <div class="change">
-<span th:text="${option_a}"></span><br>
-<span th:text="${option_b}"></span><br>
-<span th:text="${option_c}"></span><br>
-<span th:text="${option_d}"></span>
+<div class="select">
+<span th:text="${option_a}"></span></div>
+<br>
+
+<div class="select">
+<span th:text="${option_b}"></span></div>
+<br>
+
+<div class="select">
+<span th:text="${option_c}"></span></div>
+<br>
+
+<div class="select">
+<span th:text="${option_d}"></span></div>
 </div>
 </div>
 
