--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -18,9 +18,9 @@
 
 <br>
 
-<a href="/help">ID・パスワードを忘れたら</a>
+<a href="/help" id="help">ID・パスワードを忘れたら</a>
 <br>
-<input type="submit" value="ログイン">
+<input type="submit" id="login" value="ログイン">
 <br>
 <span th:text="${message}" style="color:red"></span>
 </form>
