--- a/src/main/resources/templates/flashcard.html
+++ b/src/main/resources/templates/flashcard.html
@@ -13,7 +13,9 @@
 <h1>フラッシュカード</h1>
 <a href="/flashcard/new/add" class="url"><span class="urlText">カードを新規作成</span></a>
 <br>
-<a href="/flashcard/use" class="url"><span class="urlText">フラッシュカードで学習する</span></a>
+<a href="/flashcard/use/my" class="url"><span class="urlText">Myカードで学習</span></a>
+<br>
+<a href="/flashcard/use" class="url"><span class="urlText">共有カードで学習する</span></a>
 <br>
 <a href="/flashcard/favorites" class="url"><span class="urlText">お気に入り登録したカード一覧</span></a>
 </body>
