--- a/src/main/resources/templates/reply.html
+++ b/src/main/resources/templates/reply.html
@@ -42,6 +42,6 @@
 </form></table>
 <p th:text="${error}" style="color: red"></p>
 <br><br><br>
-
+<a href="/tweet" class="btn-flat-simple">掲示板</a>
 </body>
 </html>
