--- a/src/main/resources/templates/ownerTop.html
+++ b/src/main/resources/templates/ownerTop.html
@@ -5,9 +5,10 @@
 <title>Top</title>
 </head>
 <body>
-<a href="#">User Report</a>
-<a href="owner/flashcard">flashcard</a>
+<a href="#">userReport</a>
+<a href="/owner/flashcard">flashcard</a>
 <a href="/owner/tweet">tweet</a>
 <a href="/owner/booklist">book</a>
+<a href="/owner/user">userInformation</a>
 </body>
 </html>
