--- a/src/main/resources/templates/ownerLogin.html
+++ b/src/main/resources/templates/ownerLogin.html
@@ -7,6 +7,7 @@
 <body>
 <h2>login</h2>
 <hr>
+<div th:text="${error}"></div>
 <form action="/owner/login" method="post">
 ownerID<input type="text" name="id">
 password<input type="password" name="password">
