--- a/src/main/resources/static/css/edit.css
+++ b/src/main/resources/static/css/edit.css
@@ -9,18 +9,18 @@ body {
 
 }
 
-
-
-
-
 table{
 	width: 40%;
+}
+
+.date{
+	width:10%;
 }
 
 tr{
 	border-bottom: solid 2px white;
 }
-table.tweet tr:hover{ /*hoverしてる行を色で表示*/
+table.reply tr:hover{ /*hoverしてる行を色で表示*/
   background-color: #d4f0fd;
 }
 
@@ -50,6 +50,27 @@ tr:last-child{ /*一番下のボーダー削除*/
   border-top: 10px solid transparent;
   border-bottom: 10px solid transparent;
 }
+.Maintweet{
+  position: relative;  /*相対位置*/
+  text-align: left;
+  width: 15%;
+  background-color: #ff6666;
+  color: white;
+  text-align: center;
+  padding: 10px 0;
+}
+.Maintweet:after{  /*吹き出しの三角の部分*/
+  display: block;
+  content: "";
+  width: 0px;
+  height: 0px;
+  position: absolute;
+  top:calc(50% - 10px);
+  right:-10px;
+  border-left: 10px solid #ff6666;
+  border-top: 10px solid transparent;
+  border-bottom: 10px solid transparent;
+}
 
 textarea{
 	resize: none;  /*大きさ固定*/
@@ -59,7 +80,7 @@ textarea{
 
 }
 
-.tweet{ /*テーブル全体*/
+.reply{ /*テーブル全体*/
   text-align: center;
   width: 70%;
   text-align: center;
@@ -71,9 +92,6 @@ textarea{
 	width:15%;
 }
 
-.heart{
-	width:8%;
-}
 
 .button{  /*投稿ボタン*/
 	background-color: #6699cc;
@@ -94,46 +112,20 @@ textarea{
 	border-radius: 0.5rem;
 }
 
-#hukidashi{
-
-	width: 20px;
-	height: 20px;
-}
-
-.submit form{
-	display: inline-block; /*横並びに*/
-	margin: 0 10px;
-}
-
-/*並び替えボタンの装飾*/
-.line{
-	border-radius: 5%;  /*丸み*/
-	font-size: 15px;
-	cursor: pointer;
-	padding: 10px 18px;
-	background:rgb(193, 193, 193);
-	color: black;
-	line-height: 1em;
-	transtion: .3s;
-	border: 2px solid rgba(153, 153, 153, 0.59);
-}
-
-
-/*投稿画面移動ボタン*/
-#migration {
+.btn-flat-simple {
+  position: relative;
   display: inline-block;
+  font-weight: bold;
+  padding: 0.25em 0.5em;
   text-decoration: none;
-  background: #87befd;
-  color: #FFF;
-  width: 60px;
-  height: 60px;
-  line-height: 60px;
-  border-radius: 50%;
-  text-align: center;
-  overflow: hidden;
+  color: #00BCD4;
+  background: #ECECEC;
   transition: .4s;
+  border: 1px solid rgb(183, 183, 219);
+
 }
 
-#migration:hover {
-  background: #668ad8;
+.btn-flat-simple:hover {
+  background: #00bcd4;
+  color: white;
 }
