--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -20,6 +20,9 @@
 </div>
 <br><br>
 
+<a href="/report">管理者へ通告する</a>
+<br><br>
+
 <div class="main">
 <a href="/flashcard" id="flashcard"><img src="/img/flashcard_color.png"><p class="text">フラッシュカード</p></a>
 
