--- a/src/main/resources/templates/ownerTop.html
+++ b/src/main/resources/templates/ownerTop.html
@@ -5,10 +5,13 @@
 <title>Top</title>
 </head>
 <body>
-<a href="#">userReport</a>
+<a href="/owner/report">userReport<span th:text="${notification}"></span></a>
 <a href="/owner/flashcard">flashcard</a>
 <a href="/owner/tweet">tweet</a>
 <a href="/owner/booklist">book</a>
 <a href="/owner/user">userInformation</a>
+
+<br><br>
+<a href="/ownership/studytool/logout">logout</a>
 </body>
 </html>
