--- a/src/main/resources/templates/updateProfile.html
+++ b/src/main/resources/templates/updateProfile.html
@@ -10,7 +10,7 @@
 
 <h1>プロフィール参照・変更</h1>
 
-<div th:text="${message}"></div>
+<div th:text="${message}" style="color:red"></div>
 
 <div class="update">
 <form action="/profile/update" method="post">
