--- a/src/main/resources/templates/edit.html
+++ b/src/main/resources/templates/edit.html
@@ -10,12 +10,12 @@
 <span th:replace="menu"></span>
 
 <h1>編集</h1>
-<div th:text="${message}"></div>
+<div th:text="${message}" style="color: red"></div>
 <br>
 <form action="/tweet/edit">
-<input type="text" class="text" name="tweet" th:value=${tweet}> <!--  -->
+<textarea name="tweet" id="contribution" placeholder="編集してください"></textarea>
 <br>
-<input type="submit" class="edit" value="変更">
+<p><input type="submit" id="edit" value="編集"></p>
 </form>
 <br>
 <a href="/tweet" class="btn-flat-simple">掲示板</a>
